--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+	<!-- LoginFragment colors -->
+
+	<color name="colorPrimary">#008577</color>
+	<color name="colorPrimaryDark">#00574B</color>
+	<color name="colorAccent">#D81B60</color>
+	<color name="purple_200">#FFBB86FC</color>
+	<color name="purple_500">#FF6200EE</color>
+	<color name="purple_700">#FF3700B3</color>
+	<color name="teal_200">#FF03DAC5</color>
+	<color name="teal_700">#FF018786</color>
+	<color name="black">#FF000000</color>
+	<color name="white">#FFFFFFFF</color>
+
+	<color name="_bg__loginfragment_ek2_color">#FFFFFF</color>
+	<color name="login_ek1_color">#000000</color>
+	<color name="rectangle_1_ek1_color">#F9F9F9</color>
+	<color name="login_ek3_color">#111010</color>
+
+	<color name="_bg__reportfragment_ek2_color">#FFE609</color>
+	<color name="send_your_report_color">#000000</color>
+	<color name="ellipse_1_color">#FFFBFB</color>
+	<color name="login_color">#111010</color>
+
+
 </resources>
