--- a/app/src/main/res/drawable-nodpi/rectangle_11_shape.xml
+++ b/app/src/main/res/drawable-nodpi/rectangle_11_shape.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- line_1 from your XD file. -->
+<!-- rectangle_11 from your XD file. -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 	android:shape="rectangle" >
-	<solid android:color="@color/risk_assessment_color" />
+	<solid android:color="@color/rectangle_11_color" />
 </shape>
 
