--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,5 +23,14 @@
 	<color name="ellipse_1_color">#FFFBFB</color>
 	<color name="login_color">#111010</color>
 
+	<color name="_bg__reportlistfragment_ek2_color">#FFFFFF</color>
+	<color name="rectangle_11_color">#FFE609</color>
+	<color name="risk_assessment_color">#000000</color>
+
+	<color name="_bg__riskassessmentfragment_ek2_color">#FFE609</color>
+	<color name="report_1_color">#000000</color>
+	<color name="ellipse_6_color">#FFFBFB</color>
+	<color name="login_color">#111010</color>
+
 
 </resources>
