--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,129 +1,140 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent" android:layout_height="wrap_content" >
+<?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	>
+
+	<androidx.constraintlayout.widget.ConstraintLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent">
+
+		<RelativeLayout
+			android:id="@+id/page_homefragment_ek1"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintEnd_toEndOf="parent">
 
 
-
-
-			<RelativeLayout android:id="@+id/page_homefragment_ek1"
-				android:layout_marginTop="0dp"
-				android:layout_marginStart="0dp"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginLeft="0dp"
+			<RelativeLayout android:id="@+id/home_background"
+				android:layout_marginTop="-376.5dp"
+				android:layout_marginStart="-240dp"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:layout_marginLeft="-240dp"
 				tools:ignore="VisualLintBounds">
 
-				<View   android:id="@+id/_bg__homefragment_ek2"
-					android:background="@drawable/_bg__homefragment_ek2_shape"
-					 android:layout_marginStart="0dp"
-					android:layout_marginTop="0dp"
-					android:layout_width="411dp"
-					android:layout_height="823dp"
-					android:layout_marginLeft="0dp" />
-
-
-				<RelativeLayout android:id="@+id/home_background"
-					android:layout_marginTop="-376.5dp"
-					android:layout_marginStart="-240dp"
+				<ImageView
+					android:id="@+id/down"
+					android:src="@drawable/down"
+					android:contentDescription="down"
+					android:layout_marginStart="240dp"
+					android:layout_marginTop="740dp"
 					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_marginLeft="-240dp"
-					tools:ignore="VisualLintBounds">
+					android:layout_height="wrap_content" />
 
-					<ImageView android:id="@+id/down"
-						android:src="@drawable/down"
-						android:contentDescription="down"
-						 android:layout_marginStart="78dp"
-						android:layout_marginTop="831dp"
-						android:layout_width="814.31dp"
-						android:layout_height="745.55dp" />
-
-					<ImageView android:id="@+id/up"
-						android:src="@drawable/up"
-						android:contentDescription="up"
-						 android:layout_marginStart="0dp"
-						android:layout_marginTop="0dp"
-						android:layout_width="814.31dp"
-						android:layout_height="745.55dp" />
-
-				</RelativeLayout>
-
-
-				<RelativeLayout android:id="@+id/group_2"
-					android:layout_marginTop="306dp"
-					android:layout_marginStart="32dp"
+				<ImageView
+					android:id="@+id/up"
+					android:src="@drawable/up"
+					android:contentDescription="up"
+					android:layout_marginStart="240dp"
+					android:layout_marginTop="375dp"
 					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					>
-
-					<ImageView android:id="@+id/rectangle_6"
-						android:src="@drawable/rectangle_6"
-						android:contentDescription="rectangle_6"
-						 android:layout_marginStart="0dp"
-						android:layout_marginTop="0dp"
-						android:layout_width="173dp"
-						android:layout_height="163dp" />
-
-					<TextView android:id="@+id/send_report"
-						android:textStyle="bold|italic"
-						android:textSize="20sp"
-						android:textColor="@color/send_report_color"
-						android:layout_marginLeft="12dp"
-						android:layout_marginTop="132dp"
-						android:layout_width="163dp"
-						android:layout_height="45dp"
-						android:text="@string/send_report_string"
-						 />
-
-				</RelativeLayout>
-
-
-				<RelativeLayout android:id="@+id/group_3"
-					android:layout_marginTop="318dp"
-					android:layout_marginStart="255dp"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					>
-
-					<ImageView android:id="@+id/rectangle_6_ek1"
-						android:src="@drawable/rectangle_6_ek1"
-						android:contentDescription="rectangle_6_ek1"
-						 android:layout_marginStart="0dp"
-						android:layout_marginTop="0dp"
-						android:layout_width="113dp"
-						android:layout_height="140dp" />
-
-					<TextView
-						android:id="@+id/manage_risk"
-						android:layout_width="163dp"
-						android:layout_height="45dp"
-						android:layout_marginLeft="0dp"
-						android:layout_marginTop="120dp"
-						android:text="@string/manage_risk_string"
-						android:textColor="@color/send_report_color"
-						android:textSize="20sp"
-						android:textStyle="bold"
-						tools:ignore="TextSizeCheck" />
-
-				</RelativeLayout>
-
-				<ImageView android:id="@+id/rectangle_4"
-					android:src="@drawable/rectangle_4"
-					android:contentDescription="rectangle_4"
-					 android:layout_marginStart="144dp"
-					android:layout_marginTop="200dp"
-					android:layout_width="122dp"
-					android:layout_height="133dp" />
-
-				<TextView android:id="@+id/home"
-					android:textStyle="bold|italic"
-					android:textSize="70sp"
-					android:textColor="@color/send_report_color"
-					android:layout_marginLeft="105dp"
-					android:layout_marginTop="140dp"
-					android:layout_width="284dp"
-					android:layout_height="153dp"
-					android:text="@string/home_string"
-					 />
+					android:layout_height="wrap_content" />
 
 			</RelativeLayout>
+
+
+			<FrameLayout
+				android:id="@+id/send_report_layout"
+				android:layout_marginTop="306dp"
+				android:layout_marginStart="32dp"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				>
+
+				<ImageButton
+					android:id="@+id/send_report_btn"
+					android:src="@drawable/rectangle_6"
+					android:background="@null"
+					android:contentDescription="rectangle_6"
+					android:layout_marginStart="10dp"
+					android:layout_marginTop="0dp"
+					android:layout_width="120dp"
+					android:layout_height="160dp" />
+
+				<TextView
+					android:id="@+id/send_report"
+					android:textStyle="bold|italic"
+					android:textSize="20sp"
+					android:textColor="@color/send_report_color"
+					android:layout_marginLeft="20dp"
+					android:layout_marginTop="132dp"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="@string/send_report_string"
+					/>
+
+			</FrameLayout>
+
+
+			<FrameLayout
+				android:id="@+id/manage_risk_layout"
+				android:layout_marginTop="318dp"
+				android:layout_marginStart="255dp"
+				android:layout_width="125dp"
+				android:layout_height="150dp"
+				>
+
+				<ImageButton
+					android:id="@+id/manage_risk_btn"
+					android:src="@drawable/rectangle_6_ek1"
+					android:background="@null"
+					android:contentDescription="rectangle_6_ek1"
+					android:layout_marginStart="0dp"
+					android:layout_marginTop="0dp"
+					android:layout_width="113dp"
+					android:layout_height="140dp"/>
+
+				<TextView
+					android:id="@+id/manage_risk"
+					android:layout_width="163dp"
+					android:layout_height="45dp"
+					android:layout_marginLeft="0dp"
+					android:layout_marginTop="120dp"
+					android:text="@string/manage_risk_string"
+					android:textColor="@color/send_report_color"
+					android:textSize="20sp"
+					android:textStyle="bold"
+					tools:ignore="TextSizeCheck" />
+
+			</FrameLayout>
+
+			<ImageView
+				android:id="@+id/rectangle_4"
+				android:src="@drawable/rectangle_4"
+				android:contentDescription="rectangle_4"
+				android:layout_marginStart="144dp"
+				android:layout_marginTop="200dp"
+				android:layout_width="122dp"
+				android:layout_height="133dp" />
+
+			<TextView
+				android:id="@+id/home"
+				android:textStyle="bold|italic"
+				android:textSize="70sp"
+				android:textColor="@color/send_report_color"
+				android:layout_marginLeft="115dp"
+				android:layout_marginTop="125dp"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="@string/home_string"
+				/>
+
+		</RelativeLayout>
+
+	</androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
