--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,6 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	tools:context=".HomeFragment"
 	>
 
 	<androidx.constraintlayout.widget.ConstraintLayout
@@ -31,7 +32,7 @@
 					android:src="@drawable/down"
 					android:contentDescription="down"
 					android:layout_marginStart="240dp"
-					android:layout_marginTop="740dp"
+					android:layout_marginTop="700dp"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content" />
 
@@ -125,7 +126,7 @@
 				android:id="@+id/home"
 				android:textStyle="bold|italic"
 				android:textSize="70sp"
-				android:textColor="@color/send_report_color"
+				android:textColor="@color/teal_700"
 				android:layout_marginLeft="115dp"
 				android:layout_marginTop="125dp"
 				android:layout_width="wrap_content"
