--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,6 +1,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	tools:context=".LoginFragment"
 	 >
 
 	<androidx.constraintlayout.widget.ConstraintLayout
@@ -16,10 +17,9 @@
 			app:layout_constraintTop_toTopOf="parent"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			>
+			app:layout_constraintEnd_toEndOf="parent">
 
-			<RelativeLayout android:id="@+id/background"
+			<FrameLayout android:id="@+id/background"
 				android:layout_marginTop="0dp"
 				android:layout_marginStart="0dp"
 				android:layout_width="match_parent"
@@ -48,11 +48,11 @@
 					android:src="@drawable/rectangle_3"
 					android:contentDescription="rectangle_3"
 					android:layout_marginStart="0dp"
-					android:layout_marginTop="565dp"
+					android:layout_marginTop="525dp"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"/>
 
-			</RelativeLayout>
+			</FrameLayout>
 
 
 			<RelativeLayout android:id="@+id/login"
@@ -62,7 +62,7 @@
 				android:layout_height="wrap_content"
 				>
 
-				<TextView android:id="@+id/login_ek1"
+				<TextView android:id="@+id/loginTxt"
 					android:textStyle="bold"
 					android:textSize="36sp"
 					android:textColor="@color/login_ek1_color"
@@ -74,7 +74,7 @@
 					/>
 
 
-				<TextView android:id="@+id/username"
+				<TextView android:id="@+id/usernameTxt"
 					android:textSize="14sp"
 					android:textColor="@color/login_ek1_color"
 					android:layout_marginLeft="4dp"
@@ -94,7 +94,7 @@
 					android:layout_marginStart="0dp"
 					android:layout_marginTop="100dp" />
 
-				<TextView android:id="@+id/password"
+				<TextView android:id="@+id/passwordTxt"
 					android:textSize="14sp"
 					android:textColor="@color/login_ek1_color"
 					android:layout_marginLeft="4dp"
