--- a/app/src/main/res/layout/fragment_reportlist.xml
+++ b/app/src/main/res/layout/fragment_reportlist.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	tools:context=".ReportListFragment">
 
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
@@ -19,14 +20,6 @@
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			>
-
-			<androidx.recyclerview.widget.RecyclerView
-				android:id="@+id/recycler_view_1"
-				android:layout_width="320dp"
-				android:layout_height="540dp"
-				android:layout_marginTop="160dp"
-				android:layout_marginStart="45dp"
-				android:layout_marginLeft="45dp" />
 
 			<View
 				android:id="@+id/rectangle_12"
@@ -71,6 +64,14 @@
 				android:layout_marginTop="4dp"
 				android:layout_width="408dp"
 				android:layout_height="815dp" />
+
+			<androidx.recyclerview.widget.RecyclerView
+				android:id="@+id/recyclerView1"
+				android:layout_marginTop="160dp"
+				android:layout_marginStart="50dp"
+				android:layout_width="310dp"
+				android:layout_height="500dp" />
+
 
 		</RelativeLayout>
 
