--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -136,6 +136,7 @@
 				/>
 
 			<RadioGroup
+				android:id="@+id/radio_btn"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_marginTop="540dp"
@@ -198,7 +199,7 @@
 				/>
 
 
-			<Button android:id="@+id/login"
+			<Button android:id="@+id/submitBtn"
 				android:textSize="36sp"
 				android:textColor="@color/login_color"
 				android:layout_marginLeft="125dp"
