--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -5,6 +5,7 @@
     android:layout_height="100dp">
 
     <FrameLayout
+        android:id="@+id/report_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -15,11 +16,13 @@
             android:background="@null"
             android:layout_height="wrap_content"/>
 
-        <Button
-            android:id="@+id/list_btn"
+        <TextView
+            android:id="@+id/list_txt"
             android:background="@null"
             android:text="TextView"
             android:textSize="30sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
             android:layout_marginTop="25dp"
             android:layout_marginStart="120dp"
             android:layout_width="wrap_content"
